--- a/style.css
+++ b/style.css
@@ -160,14 +160,14 @@ form label,
 form legend {
   display: block;
   font-size: 20px;
-  margin: 0 0 10px;
+  margin: 0 0 25px;
 }
 
 .input-padron {
   display: block;
   margin: 0 0 20px;
   padding: 10px 25px;
-  width: 50%;
+  width: 36%;
 }
 
 .checkbox {
@@ -185,6 +185,7 @@ form legend {
   border-radius: 5px;
   transition: 1s all;
   cursor: pointer;
+  margin-bottom: 20px;
 }
 
 .enviar:hover {
@@ -310,7 +311,6 @@ th {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-bottom: 20px;
   width: 100%;
   text-align: center;
   background: linear-gradient(#fefefe, #888888);
