--- a/style.css
+++ b/style.css
@@ -216,10 +216,9 @@ th {
 }
 
 .principal {
-  background: #fefefe;
   padding: 3em 0;
-  width: 80%;
   margin: 0 auto;
+  background-color: #fefefe;
 }
 
 .titulo-principal {
@@ -230,7 +229,7 @@ th {
 }
 
 .principal p {
-  margin: 0 0 1em;
+  margin-left: 20px;
   font-size: 18px;
   font-weight: bold;
   line-height: 35px;
@@ -248,7 +247,7 @@ th {
 .utensillos {
   width: 120px;
   float: left;
-  margin: 0 20px 20px 0;
+  margin: 20px;
 }
 
 .mapa {
@@ -372,6 +371,26 @@ iframe {
   .videos-diferenciales {
     display: block;
     padding: 5px;
+  }
+
+  .video-responsive {
+    position: relative;
+    padding-bottom: 70.25%;
+    padding-top: 50px;
+    height: 0;
+    overflow: hidden;
+  }
+
+  .video-responsive iframe,
+  .video-responsive object,
+  .video-responsive embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin-top: 10px;
   }
 
   .caja,
