--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ header {
   width: 940px;
   position: relative;
   margin: 0 auto;
+  height: 100%;
 }
 
 nav {
@@ -159,7 +160,7 @@ form {
 form label,
 form legend {
   display: block;
-  font-size: 20px;
+  font-size: 50px;
   margin: 0 0 25px;
 }
 
@@ -167,7 +168,16 @@ form legend {
   display: block;
   margin: 0 0 20px;
   padding: 10px 25px;
-  width: 36%;
+  width: 50%;
+  height: 4%;
+}
+
+.input-textarea {
+  display: block;
+  margin: 0 0 20px;
+  padding: 10px 25px;
+  width: 50%;
+  height: 20%;
 }
 
 .checkbox {
@@ -175,9 +185,9 @@ form legend {
 }
 
 .enviar {
-  width: 40%;
+  width: 30%;
   padding: 15px 0;
-  font-size: 18px;
+  font-size: 25px;
   font-weight: bold;
   color: #ffffff;
   background: #c02d9b;
@@ -185,7 +195,7 @@ form legend {
   border-radius: 5px;
   transition: 1s all;
   cursor: pointer;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
 }
 
 .enviar:hover {
@@ -274,7 +284,7 @@ th {
 .titulo-talles {
   text-align: initial;
   font-size: 2em;
-  margin: 0px 1em 1em;
+  margin: 0px 1em;
   clear: left;
   font-weight: bold;
 }
@@ -378,6 +388,7 @@ iframe {
   body {
     display: grid;
     background-color: #888888;
+    height: 100%;
   }
   h1 {
     text-align: center;
@@ -393,6 +404,14 @@ iframe {
 
   .imagen {
     max-height: 300px;
+  }
+
+  .titulo-principal {
+    text-align: center;
+  }
+
+  .titulo-talles {
+    text-align: center;
   }
 
   .talles {
