--- a/style.css
+++ b/style.css
@@ -94,11 +94,20 @@ nav a:hover {
   width: 100%;
 }
 
-.productos {
-  /* width: 940px; */
-  margin: 0 auto;
+.titulo-productos {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 60px;
+  padding: 30px;
+}
+
+.contenedor-productos {
   background: linear-gradient(#fefefe, #888888);
-  /* padding: 50px; */
+}
+
+.productos {
+  margin: 0 auto;
 }
 
 .productos li {
@@ -140,6 +149,13 @@ nav a:hover {
   font-size: 20px;
   font-weight: bold;
   margin-top: 10px;
+}
+
+.recomendaciones {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
 }
 
 footer {
@@ -328,6 +344,18 @@ th {
   width: 500px;
   height: 500px;
   padding: 20px;
+}
+
+.tablas {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+h4 {
+  text-align: center;
+  font-size: 30px;
+  font-weight: bold;
 }
 
 .diferenciales {
