--- a/style.css
+++ b/style.css
@@ -255,6 +255,7 @@ form legend {
   padding: 20px;
   border-radius: 10px;
   border: 2px solid black;
+  box-shadow: 8px 10px 10px 1px rgba(0, 0, 0, 0.8);
 }
 
 table {
