--- a/style.css
+++ b/style.css
@@ -243,6 +243,10 @@ form legend {
   text-decoration: none;
 }
 
+.icono-whatsapp {
+  margin-right: 30px;
+}
+
 .boton-whatsapp {
   font-size: 25px;
   padding: 20px;
@@ -251,7 +255,7 @@ form legend {
 }
 
 .boton-whatsapp-index {
-  font-size: 15px;
+  font-size: 20px;
   padding: 20px;
   border-radius: 10px;
   border: 2px solid black;
