--- a/style-home.css
+++ b/style-home.css
@@ -1,49 +1,48 @@
-
-.titulo-principal{
-    padding-left: 30px;
+.titulo-principal {
+  padding-left: 30px;
 }
 
-#banner{
-    width: 100%;
+#banner {
+  width: 100%;
 }
 
-.principal{
-    background: #CCCCCC;
-    padding: 20px;
+.principal {
+  background: #cccccc;
+  padding: 20px;
 }
 
-.titulo-centralizado{
-    text-align: center;
+.titulo-centralizado {
+  text-align: center;
 }
 
-p{
-    text-align: center;
+p {
+  text-align: center;
 }
 
-em strong{
-    color: red;
+em strong {
+  color: red;
 }
 
-#mision{
-    font-size: 20px;
+#mision {
+  font-size: 20px;
 }
 
-.diferenciales{
-    background: #FFFFFF;
-    padding: 30px;
+.diferenciales {
+  background: #ffffff;
+  padding: 30px;
 }
 
-.items{
-    font-style: italic;
+.items {
+  font-style: italic;
 }
 
-ul{
-    display: inline-block;
-    vertical-align: top;
-    width: 20%;
-    margin-right: 15%;
+ul {
+  display: inline-block;
+  vertical-align: top;
+  width: 20%;
+  margin-right: 15%;
 }
 
-.imagenDiferenciales{
-    width: 50%;
+.imagenDiferenciales {
+  width: 50%;
 }
