--- a/style.css
+++ b/style.css
@@ -317,6 +317,12 @@ th {
   font-style: italic;
 }
 
+.diseño p {
+  font-size: 25px;
+  font-family: sans-serif;
+  font-weight: bolder;
+}
+
 .utensillos {
   width: 120px;
   float: left;
