--- a/style.css
+++ b/style.css
@@ -22,14 +22,14 @@ nav {
 
 nav li {
   display: inline;
-  margin: 0 0 0 15px;
+  margin: 0 0 0 10px;
 }
 
 nav a {
   text-transform: uppercase;
   color: #ffffff;
   font-weight: bold;
-  font-size: 30px;
+  font-size: 25px;
   text-decoration: none;
 }
 
@@ -139,6 +139,15 @@ nav a:hover {
 
 .productos li:hover h2 {
   font-size: 33px;
+}
+
+.productos li,
+p {
+  font-size: 35px;
+  font-weight: bold;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  margin-bottom: 15px;
 }
 
 .productos-descripcion {
